fixes cut off award on 1280px and wider screens

--- a/less/main.less
+++ b/less/main.less
@@ -17,6 +17,8 @@ body {
   background-image: url("../images/clouds5.jpg");
   background-size: cover;
   margin: 0;
+  overflow-x: hidden;
+  overflow-y: scroll;
 }
 
 .page-container {
@@ -24,7 +26,6 @@ body {
   max-width: 1400px;
   margin: 0 auto;
   padding-bottom: 12%;
-  overflow: hidden;
 }
 
 /* Section 1 begins:  header; book; book-title; synopsis */
